WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39762
[Qt] SoundQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39762
Summary
[Qt] SoundQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:27:01 PDT
WebCore/platform/qt/SoundQt.cpp:30: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/platform/qt/SoundQt.cpp:32: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 2 in 1 files
Attachments
Patch that fixes the coding style issues
(894 bytes, patch)
2010-05-26 14:34 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(946 bytes, patch)
2010-06-04 18:42 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:34:41 PDT
Created
attachment 57142
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:42:00 PDT
QtTriaged
David Levin
Comment 3
2010-05-27 11:20:30 PDT
Comment on
attachment 57142
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 18:42:08 PDT
Created
attachment 57936
[details]
Patch
Eric Seidel (no email)
Comment 5
2010-06-04 22:00:28 PDT
Comment on
attachment 57936
[details]
Patch LGTM.
WebKit Commit Bot
Comment 6
2010-06-04 22:14:47 PDT
Comment on
attachment 57936
[details]
Patch Clearing flags on attachment: 57936 Committed
r60733
: <
http://trac.webkit.org/changeset/60733
>
WebKit Commit Bot
Comment 7
2010-06-04 22:14:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug