third_party/WebKit/WebCore/platform/qt/SoundQt.cpp
@@ -27,10 +27,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  */
 
 #include "config.h"
+#include "Sound.h"
 
 #include <QApplication>
-
-#include "Sound.h"
 
 namespace WebCore {
 
